--- a/smos-cursor-gen/package.yaml
+++ b/smos-cursor-gen/package.yaml
@@ -39,10 +39,10 @@ tests:
     main: Main.hs
     source-dirs: test
     build-tools: hspec-discover
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+    # ghc-options:
+    # - -threaded
+    # - -rtsopts
+    # - -with-rtsopts=-N
     dependencies:
     - QuickCheck
     - bytestring
