build the version into the smos executable

--- a/.github/workflows/stack-build.yml
+++ b/.github/workflows/stack-build.yml
@@ -48,6 +48,11 @@ jobs:
         run: |
           stack install --system-ghc autoexporter
 
+      - name: Build smos-version
+        run: |
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+            smos-data
+
       - name: Build smos-data
         run: |
           stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
