--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -20,6 +20,7 @@ library:
   - async
   - base16-bytestring
   - bytestring
+  - conduit
   - containers
   - cursor
   - data-default
@@ -39,14 +40,18 @@ library:
   - servant-auth-client
   - servant-client
   - shakespeare
-  - smos-data
+  - smos
   - smos-client
+  - smos-data
   - smos-report
   - smos-server
   - smos-version
   - stm
   - template-haskell
   - text
+  - unix
+  - unliftio
+  - vty # We can get rid of this if we replace the setWindowSize function
   - wai
   - wai-extra
   - warp
@@ -55,6 +60,8 @@ library:
   - yesod
   - yesod-auth
   - yesod-static
+  - yesod-static-remote
+  - yesod-websockets
 
 executables:
   smos-web-server:
@@ -62,6 +69,12 @@ executables:
     source-dirs: app
     dependencies:
     - smos-web-server
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -optP-Wno-nonportable-include-path # For macos
+
 
 tests:
   smos-web-server-test:
