--- a/smos/package.yaml
+++ b/smos/package.yaml
@@ -91,6 +91,7 @@ tests:
     - cursor-dirforest
     - cursor-dirforest-gen
     - cursor-gen
+    - filelock
     - genvalidity
     - genvalidity-containers
     - genvalidity-hspec
