fix the file locking problem on the server using ResourceT

--- a/smos/package.yaml
+++ b/smos/package.yaml
@@ -37,6 +37,7 @@ library:
   - pretty-relative-time
   - pretty-show
   - process
+  - resourcet
   - safe
   - smos-cursor
   - smos-data
@@ -106,6 +107,7 @@ tests:
     - path
     - path-io
     - pretty-show
+    - resourcet
     - smos
     - smos-cursor
     - smos-cursor-gen
