--- a/.github/workflows/stack-build.yml
+++ b/.github/workflows/stack-build.yml
@@ -39,6 +39,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+      - uses: purescript-contrib/setup-purescript@main
       - name: Build frontend
         run: cd smos-web-server/front && yarn bundle
 
