--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -27,7 +27,7 @@ jobs:
         then
           sudo rm -rf /opt
         fi
-    - uses: cachix/cachix-action@v6
+    - uses: cachix/cachix-action@ffed6b919f842f223dbee6fde9d3d1cdf23a118e
       with:
         name: smos
         extraPullNames: iohk,validity,dirforest,cursor,cursor-dirforest,mergeful,yamlparse
@@ -44,7 +44,7 @@ jobs:
         sudo spctl --master-disable
     - uses: actions/checkout@v2
     - uses: cachix/install-nix-action@v8
-    - uses: cachix/cachix-action@v6
+    - uses: cachix/cachix-action@ffed6b919f842f223dbee6fde9d3d1cdf23a118e
       with:
         name: smos
         extraPullNames: iohk,validity,dirforest,cursor,cursor-dirforest,mergeful,yamlparse
