Trying to speed up CI (#153)
* try skip adding nixpkgs channel

* whoops

* build with the haskell nix nixpkgs directly instead of having a separate one to evaluate

* use nix-build-uncached on ci

* trying to get the stack build to pass again

* trying to get the stack build to pass again 2

* reformat the nix code

* try fixing the stack build again

* noop

* remove nix-build-uncached again

* collapse cachix usage

* whoops

Co-authored-by: Tom Sydney Kerckhove <syd@cs-syd.eu>

--- a/.github/workflows/stack-build.yml
+++ b/.github/workflows/stack-build.yml
@@ -36,9 +36,12 @@ jobs:
           path: ~/.stack
           key: ${{ runner.os }}-${{ matrix.ghc }}-stack
 
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - uses: purescript-contrib/setup-purescript@main
       - name: Build frontend
-        run: |
-          cd smos-web-server/front && nix-shell --run "yarn bundle"
+        run: cd smos-web-server/front && yarn bundle
 
       - name: Build dependencies
         run: |
