--- a/smos/package.yaml
+++ b/smos/package.yaml
@@ -92,6 +92,7 @@ tests:
     - cursor-dirforest
     - cursor-dirforest-gen
     - cursor-gen
+    - dirforest
     - filelock
     - genvalidity
     - genvalidity-containers
@@ -123,3 +124,4 @@ tests:
     - validity
     - vty
     - yaml
+    - yamlparse-applicative
