--- a/stack.yaml
+++ b/stack.yaml
@@ -29,6 +29,8 @@ packages:
 - smos-sync-client-gen
 - smos-web-server
 
+- /home/syd/src/dirforest/dirforest
+- /home/syd/src/dirforest/genvalidity-dirforest
 - /home/syd/src/cursor-dirforest/cursor-dirforest-brick
 - /home/syd/src/cursor-dirforest/cursor-dirforest-gen
 - /home/syd/src/cursor-dirforest/cursor-dirforest
@@ -127,13 +129,13 @@ extra-deps:
     - fuzzy-time-gen
   # nix-sha256: sha256:056k8maj6bq6gfbgq8xjxphgn1x97n34gqwh2mx55srmmdjzdnic
 
-- git: https://github.com/NorfairKing/dirforest
-  commit: e8c63dae86099c3c50e7908f84487126048cd93b
-  subdirs:
-    - dirforest
-    - genvalidity-dirforest
-  # nix-sha256: sha256:05zx6b3vjralkjydgq6lgx84lyd0d5s3xifc4whf7jvc60ibrg8k
-
+# - git: https://github.com/NorfairKing/dirforest
+#   commit: e8c63dae86099c3c50e7908f84487126048cd93b
+#   subdirs:
+#     - dirforest
+#     - genvalidity-dirforest
+#   # nix-sha256: sha256:05zx6b3vjralkjydgq6lgx84lyd0d5s3xifc4whf7jvc60ibrg8k
+# 
 # - git: https://github.com/NorfairKing/cursor-dirforest
 #   commit: f47b17a64d2ab4f841a4d0afcb39080a6269ddff
 #   subdirs:
