--- a/stack.yaml
+++ b/stack.yaml
@@ -29,6 +29,7 @@ packages:
 - smos-sync-client-gen
 - smos-web-server
 
+# These are duplicated in nix/overlay.
 ghc-options:
   "$locals": -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -Widentities -Wredundant-constraints -Wcpp-undef -Wcompat
 
