smos instance refactor

--- a/smos/package.yaml
+++ b/smos/package.yaml
@@ -46,6 +46,8 @@ library:
   - smos-version
   - text
   - time
+  - unix
+  - unliftio
   - unordered-containers
   - validity
   - validity-containers
