--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -32,4 +32,4 @@ jobs:
         name: smos
         extraPullNames: iohk,validity,dirforest,cursor,cursor-dirforest,mergeful,yamlparse
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-    - run: nix-build ci.nix
+    - run: nix run -f nix/build-uncached.nix -c nix-build-uncached ci.nix
