--- a/smos-sync-client-gen/package.yaml
+++ b/smos-sync-client-gen/package.yaml
@@ -18,6 +18,7 @@ library:
   - async
   - bytestring
   - containers
+  - dirforest
   - genvalidity
   - genvalidity-dirforest
   - genvalidity-hspec
