optparse for the signing key file

--- a/smos-web-server/.gitignore
+++ b/smos-web-server/.gitignore
@@ -1,8 +1,6 @@
 .stack-work/
 smos-server.cabal
 *~
-signing-key.json
 smos-server-database.sqlite3*
-smos-server-uuid.json
-logins.json
+*.json
 data/
