tried to fix the github yaml files

--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -22,7 +22,7 @@ jobs:
 
 
   dynamic:
-    name: Normal build: ${{ matrix.os }}
+    name: Normal build ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
