--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -18,7 +18,7 @@ jobs:
         name: smos
         extraPullNames: cachix,iohk,validity,dirforest,cursor,cursor-dirforest,mergeful,yamlparse
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-    - run: nix run -f nix/build-uncached.nix -c nix-build-uncached static.nix
+    - run: nix-build hooks.nix
 
 
   dynamic:
@@ -44,7 +44,7 @@ jobs:
         name: smos
         extraPullNames: cachix
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-    - run: nix run -f nix/build-uncached.nix -c nix-build-uncached default.nix
+    - run: nix-build default.nix
 
 
   static:
@@ -60,4 +60,4 @@ jobs:
         name: smos
         extraPullNames: cachix,iohk,validity,dirforest,cursor,cursor-dirforest,mergeful,yamlparse
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-    - run: nix run -f nix/build-uncached.nix -c nix-build-uncached static.nix
+    - run: nix-build static.nix
