--- a/stack.yaml
+++ b/stack.yaml
@@ -44,24 +44,24 @@ extra-deps:
   # nix-sha256: sha256:07mdgaqw3m5m8nxsi47grqkhvk6jvlqr7q7bj3jp9xc9gf08bqxh
 
 # Be sure to change `reinstallableLibGhc` back to false if you change the `time` version to be the same as the one included in the GHC that you use.
-- git: https://github.com/haskell/time
+- github: haskell/time
   commit: 8ffb3da1118ddd40cbb2bc3cd8cf4a9d94d15211
   # nix-sha256: sha256:0b8d0k5igc2s1mhlzb7bnjxknq6bj1qvqs2az3s9nlwkcifcb2rf
 
-- git: https://github.com/ixmatus/orgmode-parse
+- github: ixmatus/orgmode-parse
   commit: 1bdfbfe8fb7299724a6f6a122a93b2e96dd839f8
   # nix-sha256: sha256:0czqqvib9wndhyh18n20ckny2xyn9f7cr6bmrkzspl0aligkb3rv
 
 - Cabal-3.2.0.0@sha256:d0d7a1f405f25d0000f5ddef684838bc264842304fd4e7f80ca92b997b710874,27320
 
 # Calendar
-- git: https://github.com/chrra/iCalendar
+- github: chrra/iCalendar
   commit: 66b408f10b2d87929ecda715109b26093c711823
   # nix-sha256: sha256:1qipvvcan5ahx3a16davji7b21m09s2jdxm78q75hxk6bk452l37
 
 - mime-0.4.0.2@sha256:208947d9d1a19d08850be67ecb28c6e776db697f3bba05bd9d682e51a59f241f,983
 
-- git: https://github.com/haskell-servant/servant-auth
+- github: haskell-servant/servant-auth
   commit: 23971e889f8cbe8790305bda8915f00aa8be5ad9
   subdirs:
     - servant-auth-client
@@ -73,7 +73,7 @@ extra-deps:
 
 
 # Password
-- git: https://github.com/cdepillabout/password 
+- github: cdepillabout/password 
   commit: 26434d4f6888faf8dc36425b20b59f0b5056d7f5
   subdirs:
     - password
@@ -85,18 +85,18 @@ extra-deps:
 
 
 
-- git: https://github.com/NorfairKing/typed-uuid
+- github: NorfairKing/typed-uuid
   commit: 5415eaeee9817dfc4846fe4d73efce9312281b27
   subdirs:
   - typed-uuid
   - genvalidity-typed-uuid
   # nix-sha256: sha256:1illk01gyhhrjmz19n5wc07n61d0s2d2m348n7ibwf2795pjkrwj
 
-- git: https://github.com/GaloisInc/sqlite
+- github: GaloisInc/sqlite
   commit: e93ee84000c1d1eedbc23036c4a20ffd07e3145f
   # nix-sha256: sha256:1ia3i97lcpsgi4zmk67hi2f2crffpiqndhl11dllw1mkqr92hklk
 
-- git: https://github.com/NorfairKing/mergeful
+- github: NorfairKing/mergeful
   commit: 15af41c244ce733f5e514d04a770479baa409370
   subdirs:
     - mergeful
@@ -104,32 +104,32 @@ extra-deps:
     - genvalidity-mergeful
   # nix-sha256: sha256:15485mb6dp4p8zwr9ka5aib7rz2v64jhdmh36wypvrakn77fjyq2
   
-- git: https://github.com/NorfairKing/pretty-relative-time
+- github: NorfairKing/pretty-relative-time
   commit: fc62907b36f6f7348d6ae0e97aceb4d41039d57b
   # nix-sha256: sha256:0dalpi3kwlr7m14sjjf2jvxfq8ydskarra2gc5j4w134m4r1m2ca
 
-- git: https://github.com/NorfairKing/cursor-fuzzy-time
+- github: NorfairKing/cursor-fuzzy-time
   commit: 0b1d393a64b0fd357a9ead86c1ef0d6bd2a4c19f
   subdirs:
     - cursor-fuzzy-time
     - cursor-fuzzy-time-gen
   # nix-sha256: sha256:0kxz4iw7qmgc0c8rrwfy6d0pwlcbsi7igsgfrmcgwszcymq2w8ki
   
-- git: https://github.com/NorfairKing/fuzzy-time
+- github: NorfairKing/fuzzy-time
   commit: 9f93ff36ccfd69b4b2958f5dc458b6f6400aa97e
   subdirs:
     - fuzzy-time
     - fuzzy-time-gen
   # nix-sha256: sha256:056k8maj6bq6gfbgq8xjxphgn1x97n34gqwh2mx55srmmdjzdnic
 
-- git: https://github.com/NorfairKing/dirforest
+- github: NorfairKing/dirforest
   commit: 8e30537d1628ff5bcb56f99d60a9384d5e9b46ea
   subdirs:
     - dirforest
     - genvalidity-dirforest
   # nix-sha256: sha256:08s3finqpbxvbq69248cyrljmwza2pp2rn370pv654l55rjbkjjx
 
-- git: https://github.com/NorfairKing/cursor-dirforest
+- github: NorfairKing/cursor-dirforest
   commit: 01e862938e7950b70d0c725dbe639f6a3d369e93
   subdirs:
     - cursor-dirforest
@@ -137,21 +137,21 @@ extra-deps:
     - cursor-dirforest-brick
   # nix-sha256: sha256:1a4vjr8ghsqlxigcdhckk1hiz88w3k8gvqvhd2ly1hfqwms07wqn
 
-- git: https://github.com/NorfairKing/cursor-brick
+- github: NorfairKing/cursor-brick
   commit: 58b2c811c721885eaa3c066b41bc4d4883e4566c
   subdirs:
     - cursor-brick
   # nix-sha256: sha256:1mdi8bpd9i2l4rcmcr19c5wyghasiwkzymskidn7fan57wmj921v
 
-- git: https://github.com/NorfairKing/cursor
+- github: NorfairKing/cursor
   commit: f0a17f78d619c34280e326ca6968cda4438c6d75
   subdirs:
     - cursor
     - cursor-gen
   # nix-sha256: sha256:1r3vi0bj3syapwi2jb77wf8w4h4v8z6vnjvcsvlzif6l17m92wzn
 
-- git: https://github.com/NorfairKing/validity
-  commit: 44c45bc2a858a2c4c0c1e75c5ae9a649456f0020
+- github: NorfairKing/validity
+  commit: 2ef8be2fba631460d770d8cbc7dd67709400fe3d
   subdirs:
   - genvalidity
   - genvalidity-aeson
@@ -187,7 +187,7 @@ extra-deps:
   - validity-unordered-containers
   - validity-uuid
   - validity-vector
-  # nix-sha256: sha256:167dxsnmp617fzlcpvsi5nbjxc5sx41qzw074rrm8g27y98al5z6
+  # nix-sha256: sha256:15cn4p2irb5pff977587lp2967gmb84dq9y9lkgvfkkjjad6fd9m
 
 - git: https://github.com/NorfairKing/yamlparse-applicative
   commit: ba2544632a21d0cfa0e2590f9a6a96fbbd026640
