--- a/stack.yaml
+++ b/stack.yaml
@@ -33,31 +33,20 @@ ghc-options:
 
 extra-deps:
 # No idea why these have to be here ... ? 
-- directory-1.3.6.1@sha256:3dc9c69c8e09ec95a7a45c6d06abe0f0d2f604439c37e5f88e5a6c335b088d71,2810
-- process-1.6.10.0@sha256:c0d2d8adaca7cea7ceaa60e67b61c775dc03727b83bdb1c97aa8cbeac9f5dd84,2469
-- unix-2.7.2.2@sha256:9e93f93cc5a065248120136e83a0a6d1ce93d6eb5ef2a2543f9593e93e164d24,3496
-
 - envparse-0.4.1@sha256:989902e6368532548f61de1fa245ad2b39176cddd8743b20071af519a709ce30,2842
 
 - git: https://github.com/jtdaugherty/vty.git
   commit: 6a9c90da0e093cec1d4903924eb0f6a33be489cb
   # nix-sha256: sha256:07mdgaqw3m5m8nxsi47grqkhvk6jvlqr7q7bj3jp9xc9gf08bqxh
 
-# Be sure to change `reinstallableLibGhc` back to false if you change the `time` version to be the same as the one included in the GHC that you use.
-- github: haskell/time
-  commit: 8ffb3da1118ddd40cbb2bc3cd8cf4a9d94d15211
-  # nix-sha256: sha256:0b8d0k5igc2s1mhlzb7bnjxknq6bj1qvqs2az3s9nlwkcifcb2rf
-
 - github: ixmatus/orgmode-parse
   commit: 1bdfbfe8fb7299724a6f6a122a93b2e96dd839f8
   # nix-sha256: sha256:0czqqvib9wndhyh18n20ckny2xyn9f7cr6bmrkzspl0aligkb3rv
 
-- Cabal-3.2.0.0@sha256:d0d7a1f405f25d0000f5ddef684838bc264842304fd4e7f80ca92b997b710874,27320
-
 # Calendar
-- github: chrra/iCalendar
-  commit: 66b408f10b2d87929ecda715109b26093c711823
-  # nix-sha256: sha256:1qipvvcan5ahx3a16davji7b21m09s2jdxm78q75hxk6bk452l37
+- github: MasseR/iCalendar
+  commit: d8acdad06988e527debef034458ddc74715f77ce
+  # nix-sha256: sha256:00k49flapqrj2yiryy1yvl1yiw710r32aiq7vvf0m5ddw88bixyg
 
 - mime-0.4.0.2@sha256:208947d9d1a19d08850be67ecb28c6e776db697f3bba05bd9d682e51a59f241f,983
 
@@ -201,7 +190,6 @@ extra-deps:
 
 - normaldistribution-1.1.0.3@sha256:2615b784c4112cbf6ffa0e2b55b76790290a9b9dff18a05d8c89aa374b213477,2160
 
-allow-newer: true # Because splitmix has a really annoying upper-bound on time<=1.9
 nix:
   path: [ "nixpkgs=https://github.com/NixOS/nixpkgs/archive/e3a2247046d4de66b9b193a6ab3ff040fa3da86d.tar.gz" ]
   add-gc-roots: true
